2nd commit added karate tests